--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
 	height : 100%;
 
 	font-family : Arial;
-	font-size : 16px;
+	font-size : 12px;
 
 	background: #888;
 
@@ -40,15 +40,57 @@ canvas {
 
 .options {
 	width: 800px;
-	margin: 0 auto;
+	margin: 0 -400px;
 	background: #ccc;
 	padding: 1% 0;
 	box-shadow: 0 2px 4px #222;
+	position: absolute;
+	left: 50%;
 
 }
 
 .options input:hover {
 	cursor: pointer
+}
+
+.slider {
+	float : left;
+	width: 200px;
+    padding: 1% 3%;
+    border: 1px solid white;
+    box-shadow: 1px 1px;
+    margin: 0 1%;
+}
+
+.slider input {
+	width: 100%;
+	float:left;
+}
+
+.slider label {
+	float: left;
+	clear: both;
+}
+
+.slider .component {
+	width:100%;
+}
+
+.slider .component .label-contain {
+	width: 100%;
+	height: 16px;
+	position: relative;
+}
+
+.slider .component label {
+	position: absolute;
+	background: white;
+	width: 13%;
+}
+
+.slider .component .value {
+
+	font-size: 0.9em;
 }
 
 .noselect {
