--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html {
 h1 {
 	font-size : 1.5em;
 	font-weight: normal;
-	color: #222;
+	color: #fff;
 }
 
 main {
@@ -40,9 +40,10 @@ canvas {
 
 .options {
 	width: 800px;
+	height: 8%;
 	margin: 0 -400px;
 	background: #ccc;
-	padding: 1% 0;
+	padding: 0.5% 0 1.5% 0;
 	box-shadow: 0 2px 4px #222;
 	position: absolute;
 	left: 50%;
@@ -56,9 +57,7 @@ canvas {
 .slider {
 	float : left;
 	width: 200px;
-    padding: 1% 3%;
-    border: 1px solid white;
-    box-shadow: 1px 1px;
+    padding: 0 3%;
     margin: 0 1%;
 }
 
@@ -84,13 +83,34 @@ canvas {
 
 .slider .component label {
 	position: absolute;
-	background: white;
-	width: 13%;
+	width: auto;
+	text-align: left;
 }
 
 .slider .component .value {
 
 	font-size: 0.9em;
+}
+
+.panel {
+	float: left;
+    text-align: right;
+    width: 30%;
+	height: 100%;
+}
+
+.panel .checkbox {
+	display: flex;
+	vertical-align: middle;
+	margin: 0 0 0 10%;
+	float: left;
+	height: 100%;
+	align-items: center;
+
+}
+
+.panel .checkbox:first-child {
+	margin: 0 !important;
 }
 
 .noselect {
