--- a/css/style.css
+++ b/css/style.css
@@ -11,16 +11,23 @@ html {
 }
 
 h1 {
-	font-size : 1.5em;
-	font-weight: normal;
-	color: #fff;
+    font-size: 1.1em;
+    font-weight: normal;
+    color: #222;
+    float: left;
+    margin: 0 4% 0 0;
+    height:100%;
+    display:flex;
+    align-items:center;
+    color: #fff;
+    text-shadow: 1px 1px #333;
 }
 
 main {
 	width: 100%;
 	position: absolute;
 	text-align: center;
-	padding: 0 0 5% 0;
+	padding: 2% 0 5% 0;
 	margin: 0;
 	cursor: default;
 }
@@ -39,15 +46,29 @@ canvas {
 }
 
 .options {
-	width: 800px;
-	height: 8%;
-	margin: 0 -400px;
+	width: 760px;
+	height: 7%;
+	margin: 12px -400px;
 	background: #ccc;
-	padding: 0.5% 0 1.5% 0;
-	box-shadow: 0 2px 4px #222;
+	padding: 0 20px;
+	box-shadow: 0px 1px 1px #000;
 	position: absolute;
+	background: #0D6969;
 	left: 50%;
+	color: #9BE09B;
+}
 
+.options > label {
+	float: left;
+    display: table;
+    height: 100%;
+    font-size: 0.9em;
+    margin-right: 1%;
+}
+
+.options > label span {
+	display: table-cell;
+	vertical-align: middle;
 }
 
 .options input:hover {
@@ -56,9 +77,7 @@ canvas {
 
 .slider {
 	float : left;
-	width: 200px;
-    padding: 0 3%;
-    margin: 0 1%;
+	margin: 0 3% 0 0;
 }
 
 .slider input {
@@ -77,7 +96,7 @@ canvas {
 
 .slider .component .label-contain {
 	width: 100%;
-	height: 16px;
+	height: 10px;
 	position: relative;
 }
 
@@ -88,15 +107,15 @@ canvas {
 }
 
 .slider .component .value {
-
-	font-size: 0.9em;
+	font-size: 0.82em;
 }
 
 .panel {
 	float: left;
     text-align: right;
-    width: 30%;
+    width: 25%;
 	height: 100%;
+	padding-left: 3%;
 }
 
 .panel .checkbox {
@@ -113,6 +132,9 @@ canvas {
 	margin: 0 !important;
 }
 
+.panel .checkbox label {
+	margin-right: 3px;
+}
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none;   /* Chrome/Safari/Opera */
